[package]
name = "mio-websocket-server"
version = "0.0.1"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
mio = "0.6"
log = "0.4.8"
env_logger = "0.7.1"
base64 = "0.12.0"
sha-1 = "0.8.2"
parser-combinators = { git = "https://github.com/sergey-melnychuk/rust-parser-combinators", tag = "0.1.3" }
