[package]
name = "mio-websocket-server"
version = "0.0.1"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
log = "0.4.8"
env_logger = "0.7.1"
base64 = "0.12.0"
sha-1 = "0.10.0"
parsed = { version = "0.3.0", features = ["http"] }
