[package]
name = "mio-websocket-server"
version = "0.0.1"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
log = "0.4.16"
env_logger = "0.9.0"
base64 = "0.12.0"
sha-1 = "0.10.0"
parsed = { version = "0.3.0", features = ["http"] }
